--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
+	<head>
+  	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>About Me</title>
   </head>
   <body>
+  	<div class="container">
+  	
+  	<h1>matt phillips</h1>
+  
+  	<img src="img/ocean_small.jpg" alt="Ocean photo">
+  </div>
+ 
   </body>
 </html>
