--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   	<div class="container">
   	
   	<h1>matt phillips</h1>
-  
-  	<img src="img/ocean_small.jpg" alt="Ocean photo">
+		
+		<img src="img/ocean_small.jpg" alt="Ocean photo">
+
+		<h2>a few things about me</h2>
   </div>
  
   </body>
