add styling, more photos and links

--- a/index.html
+++ b/index.html
@@ -7,13 +7,48 @@
   </head>
   <body>
   	<div class="container">
-  	
-  	<h1>matt phillips</h1>
-		
-		<img src="img/ocean_small.jpg" alt="Ocean photo">
+    	<h1>matt phillips</h1>
+  		
+  		<img class="largeimage" src="img/ocean_small.jpg" alt="Ocean photo">
 
-		<h2>a few things about me</h2>
-  </div>
+  		<h2>A few things about me</h2>
+  
+          <p>Born and raised in the great Pacific Northwest, my favorite way to spend time is through exploring my home state of Oregon with frequent roadtrips, hiking and camping. I've captured many a landscape image along the way, and have also done a bit of travel blogging covering a 2 month solo camping sabbatical i took winding through the backroads and mountains of Oregon and Northern California.</p>
+
+           <p>In my proffesional life, I've worked in the print production world for about 10 years, developing skills in design, pre-press, photo editing, digital printing and workflow management.</p>
+              
+
+      <img class ="smallimage1" src="img/Interests_HIKING.jpg" alt="Interests">
+      <img class ="smallimage2" src="img/synths.jpg" alt="creative and professional pursuits">
+
+     <div class="wrapper">
+      <div class="column">
+      <div class="sidebar">
+          <h4>Interests</h4>
+            <ul>
+              <li>Travel</li>
+              <li>Hiking</li>
+              <li>cupcakes</li>
+              <li>Oregon History</li>
+            </ul>
+        </div>
+
+        <div class="column">
+        <div class="sidebar">
+
+          <h4>Creative/Professional pursuits</h4>
+            <ul>
+              <li>Music</li>
+              <li><a href="https://www.evermine.com/?gclid=CPqN_9n60soCFVaTfgodq5INSA">Pre-press and Workflow production</li>
+              <li><a href="http://www.pikore.com/thevetab/">Landscape Photography</li>
+              <li>Graphic Design</li>
+              <li><a href="http://windingwheels-blog.tumblr.com/">Travel writing</a></li>
+            </ul>
+
+        </div>
+      </div>
+    </div>
  
+
   </body>
 </html>
