--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             <li><a href="https://soundcloud.com/mattphillips-4">Music</li>
             <li><a href="https://www.evermine.com/?gclid=CPqN_9n60soCFVaTfgodq5INSA">Pre-press and Workflow production</li>
             <li><a href="http://www.pikore.com/thevetab/">Landscape Photography</li>
-            <li>Graphic Design</li>
+            <li><a href="https://www.evermine.com/?gclid=CPqN_9n60soCFVaTfgodq5INSA">Graphic Design</a></li>
             <li><a href="http://windingwheels-blog.tumblr.com/">Travel writing</a></li>
+            <li><a href="http://thevetab.github.io/cupcakes/">GitHub Pages:Cupcakes</a></li>
           </ul>
         </div>
       </div>
